--- a/who-killed-who/screen.html
+++ b/who-killed-who/screen.html
@@ -107,7 +107,7 @@
         
         <button id="playSound" style="display:none;">Play</button>
         <audio id="eerieAudio1" loop>
-            <source src="audio/eerie-music1.mp3" type="audio/mpeg">
+            <source src="assets/audio/eerie-music1.mp3" type="audio/mpeg">
         </audio>
 
         <!-- Floating Back Button -->
@@ -116,32 +116,32 @@
         <div class="folder-container">
             <!-- Empty Folder (Disabled) -->
             <div>
-                <img src="img/empty-folder-100.png" alt="Empty Folder" class="folder mb-2 disabled-folder">
+                <img src="assets/img/empty-folder-100.png" alt="Empty Folder" class="folder mb-2 disabled-folder">
                 <h6>Private Backups</h6>
             </div>
 
             <div>
-                <img src="img/folder-100.png" alt="Folder" class="folder mb-2" data-bs-toggle="modal" data-bs-target="#logModal">
+                <img src="assets/img/folder-100.png" alt="Folder" class="folder mb-2" data-bs-toggle="modal" data-bs-target="#logModal">
                 <h6>Untitled Folder</h6>
             </div>
 
             <div>
-                <img src="img/folder-100.png" alt="Folder" class="folder mb-2">
+                <img src="assets/img/folder-100.png" alt="Folder" class="folder mb-2">
                 <h6>Documents</h6>
             </div>
 
             <div>
-                <img src="img/folder-100.png" alt="Folder" class="folder mb-2">
+                <img src="assets/img/folder-100.png" alt="Folder" class="folder mb-2">
                 <h6>Downloads</h6>
             </div>
 
             <div>
-                <img src="img/empty-folder-100.png" alt="Empty Folder" class="folder mb-2">
+                <img src="assets/img/empty-folder-100.png" alt="Empty Folder" class="folder mb-2">
                 <h6>Temporary Storage</h6>
             </div>
 
             <div>
-                <img src="img/folder-100.png" alt="Folder" class="folder mb-2">
+                <img src="assets/img/folder-100.png" alt="Folder" class="folder mb-2">
                 <h6>Old Documents</h6>
             </div>
         </div>
@@ -152,7 +152,7 @@
                 <div class="modal-content bg-dark text-white">
                     <div class="modal-header">
                         <h5 class="modal-title">Access Log File</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
                         <!-- Password Input for Hidden Log -->
@@ -175,7 +175,7 @@
                             <!--[LOG ENTRY] <br>
                             🔍 Access attempt detected at 2:47 AM...<br>
                             🚨 ALERT: Unauthorized access logged.-->
-                            <iframe src="log/sample_23b_dna.pdf" width="100%" height="400px" style="border: 1px solid #0af;"></iframe>
+                            <iframe src="assets/log/sample_23b_dna.pdf" width="100%" height="400px" style="border: 1px solid #0af;"></iframe>
                         </div>
                     </div>
                 </div>
